--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_student_main">StudentMain</string>
     <string name="title_activity_test_page">TestPage</string>
+    <string name="app_name2">Project FIT (Adding Activity)</string>
 </resources>
